@@ -18,12 +18,12 @@ void Text::JSONUtil::ArrayGPSTrack(NN<JSONBuilder> json, NN<Map::GPSTrack> trk)
 				json->ArrayBeginObject();
 				json->ObjectAddFloat64(CSTR("lat"), recs[k].pos.GetLat());
 				json->ObjectAddFloat64(CSTR("lon"), recs[k].pos.GetLon());
-				json->ObjectAddInt64(CSTR("t"), recs[k].recTime.ToTicks());
-				json->ObjectAddFloat64(CSTR("a"), recs[k].altitude);
-				json->ObjectAddFloat64(CSTR("s"), recs[k].speed);
-				json->ObjectAddFloat64(CSTR("h"), recs[k].heading);
-				json->ObjectAddBool(CSTR("v"), recs[k].valid);
-				json->ObjectAddInt32(CSTR("sate"), recs[k].nSateUsed);
+				json->ObjectAddInt64(CSTR("recTime"), recs[k].recTime.ToTicks());
+				json->ObjectAddFloat64(CSTR("altitude"), recs[k].altitude);
+				json->ObjectAddFloat64(CSTR("speed"), recs[k].speed);
+				json->ObjectAddFloat64(CSTR("heading"), recs[k].heading);
+				json->ObjectAddBool(CSTR("valid"), recs[k].valid);
+				json->ObjectAddInt32(CSTR("sateUsed"), recs[k].nSateUsed);
 				json->ObjectEnd();
 				k++;
 			}
