@@ -1,5 +1,9 @@
 1.6.15
 -shreadsheet Support Chart
+-Added web.getCanvasElement, web.getImgElement
+-Added export/GPXExporter.js
+-data.LocalDate.toString support undefined
+-Enhance map.GPSTrack
 
 1.6.14
 -Added zip.ZIPBuilder
